--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,5 +1,5 @@
 @if(auth.usuario_actual != null) {
-
+<app-navbar></app-navbar>
 <div class="div_main user_background">
     <div class="content_user">
         <div class="text_loged">
