modificaciones y correcciones componente quien-soy

--- a/src/app/pages/quien-soy/quien-soy.html
+++ b/src/app/pages/quien-soy/quien-soy.html
@@ -20,14 +20,14 @@
         <div class="wrapper">
             <div class="img-area">
                 <div class="inner-area">
-                    <img src="{{miData.avatar_url}}" alt="Roman Tomas">
+                    <img [src]="miData?.avatar_url" alt="Roman Tomas">
                 </div>
             </div>
             <div class="icon arrow"><i class="fas fa-arrow-left"></i></div>
             <div class="icon dots"><i class="fas fa-ellipsis-v"></i></div>
             <div class="name">{{miData.name}}</div>
             <div class="country">{{miData.location}}</div>
-            <div class="email">Email: {{miData.email}}</div>
+            <div class="email">Email: tomasromann17@gmail.com</div>
             <div class="social-icons">
                 <a href="https://www.instagram.com/tomii22roman" target="_blank" class="insta"><i class="bi bi-instagram"></i></a>
                 <a href="https://github.com/LRomannTomas" target="_blank" class="github"><i class="bi bi-github"></i></a>
