solucion conflicto guards

--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -26,9 +26,9 @@
             <button (click)="loguearse(email, clave)">Iniciar Sesión</button>
             <div class="sign-up">
                 <div class="social-icons">
-                    <button (click)="loguearse('roman@gmail.com', '123456')"><span>F</span></button>
-                    <button (click)="loguearse('tomas@hotmail.com', '123456')"><span>T</span></button>
-                    <button (click)="loguearse('juan@hotmail.com', '123456')"><span>P</span></button>
+                    <button (click)="loguearse('tomas@gmail.com', 'tomas123')"><span>T</span></button>
+                    <button (click)="loguearse('juan@gmail.com', 'juan123')"><span>J</span></button>
+                    <button (click)="loguearse('pedro@gmail.com', 'pedro123')"><span>P</span></button>
                 </div>
                 ¿Aún no eres miembro?
                 <a href="registro">¡Registrate Ya!</a>
