--- a/src/app/pages/navbar/navbar.html
+++ b/src/app/pages/navbar/navbar.html
@@ -14,6 +14,6 @@
         <li><a href="juegos/preguntados">Preguntados</a></li>
         <li><a href="juegos/calculo-mental">Cálculo Mental</a></li>
         <li><a href="resultados">Resultados</a></li>
-        <li><a (click)="salir()">Cerrar Sesión</a></li>
+        <li><a button (click)="salir()">Cerrar Sesión</a></li>
     </ul>
 </nav>
