--- a/src/app/pages/navbar/navbar.html
+++ b/src/app/pages/navbar/navbar.html
@@ -13,6 +13,7 @@
         <li><a href="juegos/mayor-menor">Mayor o Menor</a></li>
         <li><a href="juegos/preguntados">Preguntados</a></li>
         <li><a href="juegos/calculo-mental">Cálculo Mental</a></li>
+        <li><a href="paises">Listado de Paises</a></li>
         <li><a href="resultados">Resultados</a></li>
         <li><a button (click)="salir()">Cerrar Sesión</a></li>
     </ul>
